...
        startButton.position = CGPoint.position(startButton.frame,
                                                inside: size.playableRect,
                                                verticalAlign: .center,
                                                horizontalAnchor: .center,
                                                yOffset: 200.0
        )
        startButton.makeUITestAccessible(label: "newGame", traits: .button, scene: self)
        startButton.zPosition = 0
        buttonContainer.addChild(startButton)
        
        startButton.alpha = 0
        startButton.run(buttonFadeInAction)
        
...
                                                                 verticalPadding: Constants.buttonPadding,
                                                                 translatedToBounds: true)
            testUIButton.zPosition = 0
            
            buttonContainer.addChild(testUIButton)
            testUIButton.alpha = 0
            testUIButton.makeUITestAccessible(label: "snapShotSwipe", traits: .button, scene: self)
            testUIButton.run(buttonFadeInAction)
        }
        #endif
        
    }
    
...
