...
            RoundedRectangle(cornerRadius: 50.0)
                .fill(Color(UIColor.foregroundBlue), strokeColor: Color(UIColor.codexButtonLightGray), lineWidth: 3)
                .frame(width: 250, height: 75)
                .shadow(color: .black, radius: 15, x: 0, y: 0)
                .overlay(
                    HStack(alignment: .center, spacing: 0) {
                        Text("Start Run")
                            .font(.bigSubTitleCodexFont)
                            .foregroundColor(Color(UIColor.white))
                            .padding()
                            .minimumScaleFactor(0.1)
                            .lineLimit(1)
                            .foregroundColor(.black)
...
